# ChangeLog for mail-mta/nullmailer
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/nullmailer/ChangeLog,v 1.34 2008/07/14 03:52:02 robbat2 Exp $

  14 Jul 2008; Robin H. Johnson <robbat2@gentoo.org>
  -files/nullmailer-1.00-gcc34-fix.patch,
  -files/nullmailer-1.00-smtp-auth.patch,
  -files/nullmailer-1.00-syslog.patch, -files/mailer.conf,
  -files/remotes.sample, -nullmailer-1.00.ebuild:
  Clean up old version and files.

  26 Jun 2008; Robin H. Johnson <robbat2@gentoo.org> nullmailer-1.04.ebuild:
  Stabilize on amd64 per bug 229505, tested in my work prod env for months.

  26 Jun 2008; nixnut <nixnut@gentoo.org> nullmailer-1.04.ebuild:
  Stable on ppc wrt bug 229505

  26 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  nullmailer-1.04.ebuild:
  stable x86, bug 229505

  26 Jun 2008; Thilo Bangert <bangert@gentoo.org> -nullmailer-1.00-r2.ebuild,
  -nullmailer-1.02.ebuild, -nullmailer-1.02-r1.ebuild,
  -nullmailer-1.02-r2.ebuild, ChangeLog:
  remove old and obsolete versions

  28 Feb 2008; Thilo Bangert <bangert@gentoo.org> ChangeLog,
  nullmailer-1.04.ebuild:
  fix utf-8 borkage in ChangeLog - dont inherit mailer eclass

*nullmailer-1.04 (28 Feb 2008)

  28 Feb 2008; Thilo Bangert <bangert@gentoo.org>
  +files/remotes.sample-1.04, +nullmailer-1.04.ebuild, metadata.xml:
  version bump - see also bug #186393
  remove mailwrapper support
  turn on ipv6 patch unconditionally
  fix sample config file to reflect 1.01 syntax changes
  dont dep on daemontools -add myself as maintainer

  28 Oct 2007; Christian Heim <phreak@gentoo.org> nullmailer-1.00.ebuild,
  nullmailer-1.00-r2.ebuild, nullmailer-1.02.ebuild,
  nullmailer-1.02-r1.ebuild, nullmailer-1.02-r2.ebuild:
  Include virtual/logger in RDEPEND, as the initscript already specifies 'need
  logger'.

  01 Oct 2007; Sven Wegener <swegener@gentoo.org> nullmailer-1.00.ebuild,
  nullmailer-1.00-r2.ebuild, nullmailer-1.02.ebuild,