@@ -1,7 +1,17 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX init.d-nullmailer 1221 RMD160 9e793a57acc9f2123c75e5a27f4b6123ce1d171a SHA1 154b3c92512151d6d4f9dc63125536c44e207f1e SHA256 279dd0519b62b57b4f5f6a7bcbfcd8337dd3d5e6e785de1d443f2005def64d72
 AUX remotes.sample-1.04 540 RMD160 41a6f50c7d0cd0423be8d2e485e07148504316f7 SHA1 8aecf00f27f705a28e9c45c2e9807a3a4f4f309a SHA256 d9f756d9a2b21e7f7166c1b29a34c4dda1eb1ab0c57168ded3d0ed225cf692ee
 DIST nullmailer-1.04.tar.gz 176867 RMD160 13deaf37a392dfd7b57ac61b50d496dfdb9c362f SHA1 f3815fec726a776be050a6be59b91e696779f5a9 SHA256 364b7888720469d1494c6084a8de7cd39cfc8f841f3be02dfc417e111572fe8b
 DIST nullmailer_1.04-1.diff.gz 47284 RMD160 0f6ba5985d6b47678f35b090a635630646dbbd14 SHA1 61525c2b5d9297c2a976c7107e1d16dab43d2259 SHA256 daa2a9388e8fa2a93401b9ee060a7f56f2f8e820af57aeba82a8abde838fcd75
-EBUILD nullmailer-1.04.ebuild 3730 RMD160 0e70f372cb69642284bd66e4b0a4dade4e639473 SHA1 277c4c438702e2ea0dd2b81d7737a210037075a1 SHA256 1f32febdf3b9c44abd1a3c3c3dae89080f3d889b510604af1a6555570d5dbe82
-MISC ChangeLog 8146 RMD160 1b4e6911795b2520ff8d2eb6528a929de350f0f6 SHA1 8d4e1ee0c543b9922bbcfa44561f28425d8d1e00 SHA256 3e2bfa89f135eb6112487900defac0deac39ef35058907a5b71553f4b5ec4dd5
+EBUILD nullmailer-1.04.ebuild 3767 RMD160 81f3a511e007430932a548f03fed0c6db516b997 SHA1 11f7f67d0d3c0031effd3c938ccfabd207e5df4e SHA256 7a45af11cafdf4758113b17a727e5ef779143003070e089fe09e7b1bfbdb8335
+MISC ChangeLog 8281 RMD160 f602207b54c4ff475444caf469745a02e06721d1 SHA1 d46737c3975925af3c9d1e65de46d10f1da46503 SHA256 ebeb9117ab22d071d8b68c5d9c9a7f45b24b5f2a342c9e75ab1e8ad66c074974
 MISC metadata.xml 392 RMD160 2ab4e8534884a8d887e0e619b5a2685b7a8b1a06 SHA1 e53462014fe3598699f7a86ceef1f28ec1f1c104 SHA256 bd4f44a5482232a527b27507b0d18e88358193360752722a0bd1aedef85a4732
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkqtUZQACgkQAiZjviIA2Xjr1wCeLEQq5NWFsg80T4uPByZ2XV5A
+NZcAnRmIpC427lrW+6TNpLdhi7k+EBW2
+=1CWF
+-----END PGP SIGNATURE-----
