@@ -1,6 +1,10 @@
 # ChangeLog for mail-mta/nullmailer
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/nullmailer/ChangeLog,v 1.34 2008/07/14 03:52:02 robbat2 Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/nullmailer/ChangeLog,v 1.35 2009/09/13 20:09:50 flameeyes Exp $
+
+  13 Sep 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  nullmailer-1.04.ebuild:
+  Properly rebuild autotools, closes bug #255666.
 
   14 Jul 2008; Robin H. Johnson <robbat2@gentoo.org>
   -files/nullmailer-1.00-gcc34-fix.patch,
